--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 :root{
   --box-shadow: 0px 12px 32px -5px rgba(114, 198, 219, 0.151);
   --sidebar-color: #212832;
-  --under-border: 1px solid #47748b;;
+  --under-border: 1px solid #47748b;
   --card-color: #212832;
   --rounded-corners: 10px;
   --text-color: #d1cac2;
@@ -49,14 +49,33 @@ position: relative;
 z-index: 3;
 width: 60px;
 }
+.navTextContainer{
+  position: absolute;
+  height: 100%;
+  width: 100%;
+}
+#navVB{
+  font: bold 70px Century Gothic, Arial;
+  width: 100px;
+  height: 100%;
+overflow: visible;
+position: relative;
+}
 #navTextBold{
-  writing-mode: vertical-rl;
+
+  text-transform: uppercase;
+  top: 20%;
+  display: flex;
+  justify-content: center;
+  margin: 0;
+  height: 50%;
+position: absolute;
+writing-mode: vertical-rl;
 text-orientation: mixed;
-margin-left: 55px;
+font-size: 20vh;
 transform: rotate(180deg);
-color: #db9758;
+color: #47748b;;
 translate: all 0.5s ease;
-text-transform: uppercase;
 }
 
 #sidebar {
@@ -141,7 +160,7 @@ box-shadow: 0px 0px 15px -5px rgba(188, 219, 114, 0.75);
   justify-content: center;
   align-items: center;
   color: var(--text-color);;
-  height: 100vh;
+  min-height: 100vh;
   padding: 50px;
   
 }
