--- a/src/App.css
+++ b/src/App.css
@@ -68,11 +68,12 @@ position: relative;
   display: flex;
   justify-content: center;
   margin: 0;
+  margin-left: 10px;
   height: 50%;
 position: absolute;
 writing-mode: vertical-rl;
 text-orientation: mixed;
-font-size: 20vh;
+font-size: 100px;
 transform: rotate(180deg);
 color: transparent;
 translate: all 0.5s ease;
@@ -355,11 +356,13 @@ height: 0;
   color: var(--text-color);
 }
 th{
-  text-align: center;
   height: 50px;
+  text-align: center;
 }
 th, td{
   border: 1px solid #47748b;
+  padding: 8px;
+  text-align: center;
 }
 
 @media (max-width: 768px) {
