--- a/src/App.css
+++ b/src/App.css
@@ -28,13 +28,14 @@ body::-webkit-scrollbar {
   display: none;
 }
 
-h1 {
-  font-weight: 200;
-}
 
 p {
   font-weight: 100;
   margin: 0 !important;
+}
+
+input[type="text"], textarea {
+  background-color: var(--text-color);
 }
 
 #backgroundWrapper {
@@ -166,7 +167,7 @@ p {
 }
 
 .mainContentHeader {
-  padding: 20px;
+  padding: 1.6rem;
   margin-bottom: 40px;
   border-bottom: var(--under-border);
   background: var(--card-color);
@@ -175,14 +176,31 @@ p {
   justify-content: center;
   text-align: center;
 }
-
-
+.mainContentHeader h1{
+  font-weight: 200;
+}
+.socialList{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  list-style-type: none;
+  padding: 0;
+  padding-top: 1.6rem;
+  margin: 0%;
+  width: 100%;
+}
+.socialList li {
+  
+}
 
 .cardTextOutline {
   border-radius: var(--rounded-corners);
   padding: 20px;
   background: #262d38;
+  font-size: 1.3rem;
+  padding: 1.6rem;
 }
+
 
 .mainImageWrapper {
   display: flex;
@@ -276,7 +294,6 @@ p {
   -webkit-box-shadow: inset 0px 0px 132px 28px rgba(0, 0, 0, 0.89);
   -moz-box-shadow: inset 0px 0px 132px 28px rgba(0, 0, 0, 0.89);
   box-shadow: inset 0px 0px 132px 28px rgba(0, 0, 0, 0.89);
-  border-radius: 25px;
 }
 
 .projectModal img {
@@ -332,6 +349,7 @@ p {
   color: #121924;
   transition: color 0.5s ease-in-out;
 }
+
 .formOutline {
   padding: 1.6rem !important;
   border-bottom: var(--under-border);
@@ -345,6 +363,7 @@ p {
   display: flex;
   flex-direction: column;
 }
+
 #contactForm input {
   width: 100%;
   display: block;
@@ -394,8 +413,6 @@ p {
   background: var(--card-color);
   color: var(--text-color);
 }
-
-
 
 tr:nth-child(even) {
   background-color: #272e3a;
